--- a/cucumber.yaml
+++ b/cucumber.yaml
@@ -1,5 +1,8 @@
 ---
-default: -p dev
+default: -p dev -p firefox
 dev: ENV_TYPE=dev
 dev_toolbox: ENV_TYPE=dev_toolbox
 hmg: ENV_TYPE=hmg
+firefox: BROWSER=firefox
+chorme: BROWSER=chrome
+headless: BROWSER=headless
