--- a/cucumber.yaml
+++ b/cucumber.yaml
@@ -1,8 +1,11 @@
 ---
-default: -p dev -p firefox
+default: -p dev -p firefox -p html -p pretty
 dev: ENV_TYPE=dev
 dev_toolbox: ENV_TYPE=dev_toolbox
 hmg: ENV_TYPE=hmg
 firefox: BROWSER=firefox
 chorme: BROWSER=chrome
 headless: BROWSER=headless
+html: --format html --out=log/report.html
+pretty: --format pretty
+progress: --format progress
