--- a/cucumber.yaml
+++ b/cucumber.yaml
@@ -1,5 +1,6 @@
 ---
 default: -p dev -p firefox -p html -p pretty
+ci: -p dev -p firefox -p json -p pretty
 dev: ENV_TYPE=dev
 dev_toolbox: ENV_TYPE=dev_toolbox
 hmg: ENV_TYPE=hmg
@@ -7,5 +8,6 @@ firefox: BROWSER=firefox
 chorme: BROWSER=chrome
 headless: BROWSER=headless
 html: --format html --out=log/report.html
+json: --format json --out=log/report.json
 pretty: --format pretty
 progress: --format progress
